# astroeasy

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
astroeasy/: __init__.py  cli.py  config.py  constants.py  indices.py  models.py  runner.py
astroeasy/catalog/: __init__.py  gaia.py
astroeasy/dotnet/: Dockerfile  docker.py  local.py  runner.py
astroeasy/plotting/: __init__.py  images.py  normalization.py
scripts/: fetch_test_data.py  upload_test_data.py
tests/: __init__.py  conftest.py  test_catalog.py  test_cli.py  test_config.py  test_indices.py  test_models.py  test_plotting.py  test_solve.py
tests/data/: manifest.json  x_y_counts_1024_1024.txt
